test/tests/compiler/18_structures/invalid_parse/arrow_missing_member.plx
type struc s(y: i32)

pub fn main(none) i32 {
    ptr: *struc s = nil
    return ptr[]. # arrow must be followed by a member name
}
